Ref view Add navigation on ref table Clear zgeg Fix animation bug on profile menu

--- a/src/app/modules/layout/components/navbar/profile-menu/profile-menu.component.html
+++ b/src/app/modules/layout/components/navbar/profile-menu/profile-menu.component.html
@@ -10,9 +10,9 @@
       alt="" />
   </button>
   <!-- Dropdown -->
-  <!-- [@openClose]="isOpen ? 'open' : 'closed'" -->
+  <!--  -->
   <div
-    
+  [@openClose]="isOpen ? 'open' : 'closed'"
     class="absolute right-0 z-20 mt-2 w-60 origin-top-right transform rounded-md bg-background py-4 shadow-custom ring-1 ring-transparent ring-opacity-5 transition focus:outline-none">
     <div class="flext-row flex items-center px-4 pb-4">
       <div class="w-10 shrink-0">
