--- a/src/app/modules/dashboard/components/ref/ref-table/ref-table.component.html
+++ b/src/app/modules/dashboard/components/ref/ref-table/ref-table.component.html
@@ -15,33 +15,32 @@
             <!--Table head-->
             <thead class="text-xs uppercase text-muted-foreground">
                 <tr>
-                    <th class="py-3 text-left">Ref</th>
-                    <th class="py-3 text-right">Title</th>
-                    <th class="py-3 text-right">Author</th>
-                    <th class="py-3 text-right">Ref</th>
-                    <th class="py-3 text-right">View</th>
+                    <th class="py-3 text-left"></th>
+                    <th class="py-3 text-right hidden md:block">Author</th>
+                    <th class="py-3 text-right hidden md:block">Ref</th>
+                    <th class="py-3 text-right hidden md:block">View</th>
                 </tr>
             </thead>
             <!--end Table head-->
             <!--Table body-->
             <tbody>
-                <tr *ngFor="let ref of refs" class="border-b border-dashed border-border hover:bg-card">
+                <tr *ngFor="let ref of refs" class="border-b border-dashed border-border hover:bg-card" (click)="navigateToRef(ref)">
                     <td class="py-2 pr-2">
                         <div class="flex items-center">
-                            <img [src]="ref.tiktokVideoThumbnail" class="mr-2 h-10 w-10 flex-none rounded-sm" alt="" />
+                            <img [src]="ref.tiktokVideoThumbnail" class="mr-2 h-20 w-10 flex-none rounded-sm" alt="" />
                             <div class="flex flex-col justify-items-start">
                                 <a href="#" class="mb-1 text-sm font-semibold text-foreground">{{ ref.title }}</a>
                                 <span class="text-xs font-semibold text-muted-foreground/50">{{ ref.memeAuthor}}</span>
                             </div>
                         </div>
                     </td>
-                    <td class="py-2 pl-2 text-right">
+                    <td class="py-2 pl-2 text-right hidden md:block">
                         <span class="text-sm font-semibold text-muted-foreground">{{ ref.memeAuthor }}</span>
                     </td>
-                    <td class="py-2 pl-2 text-right">
+                    <td class="py-2 pl-2 text-right hidden md:block">
                         <span class="text-sm font-semibold text-muted-foreground">{{ ref.memeRef }}</span>
                     </td>
-                    <td class="py-2 pl-2 text-right">
+                    <td class="py-2 pl-2 text-right hidden md:block">
                         <div class="flex justify-end">
                             <button href="#"
                                 class="flex h-7 w-7 items-center justify-center rounded-md bg-card text-muted-foreground hover:bg-muted hover:text-foreground">
