--- a/src/app/modules/dashboard/pages/ref/ref.component.html
+++ b/src/app/modules/dashboard/pages/ref/ref.component.html
@@ -2,10 +2,10 @@
     <!-- Header -->
     <div class="mb-4 flex justify-between">
         <div class="inline-block">
-            <h3 class="font-semibold text-foreground">NFTs Dashboard</h3>
+            <h3 class="font-semibold text-foreground">Refs Dashboard</h3>
             <div class="space-x-1 text-xs font-medium text-muted-foreground">
                 <a href="" class="hover:text-primary">Dashboards</a>
-                <span> - NFTs</span>
+                <span> - Refs</span>
             </div>
         </div>
         <div class="inline-block space-x-4">
