--- a/src/app/modules/ref/ref-view/ref-view.component.html
+++ b/src/app/modules/ref/ref-view/ref-view.component.html
@@ -1,7 +1,6 @@
 <div class="h-full flex items-center justify-center" *ngIf="ref">
   <div>
-    <blockquote [attr.cite]="ref.tiktokVideoCite" [attr.data-video-id]="ref.tiktokVideoId" class="tiktok-embed"
-      auto-play="0">
+    <blockquote [attr.data-video-id]="ref.tiktokVideoId" class="tiktok-embed" auto-play="0">
       <section>
       </section>
     </blockquote>
