--- a/src/app/modules/ref/ref-upload/ref-upload.component.scss
+++ b/src/app/modules/ref/ref-upload/ref-upload.component.scss
@@ -2,6 +2,16 @@ svg {
   max-width: 200px
 }
 
+.is__invalid-input {
+  border-color: hsl(var(--primary));;
+}
+
+.is__invalid-error {
+  color: hsl(var(--primary));
+  @apply px-1 pt-1 text-xs;
+}
+
+
 @media screen and (max-width: 1280px) {
   svg{
     max-width: 100px;
