--- a/src/app/modules/ref/ref-view/ref-view.component.html
+++ b/src/app/modules/ref/ref-view/ref-view.component.html
@@ -1,4 +1,4 @@
-<div class="h-full flex items-center justify-center" *ngIf="ref">
+<div class="h-full flex items-center justify-center gap-10px" *ngIf="ref">
   <div>
     <blockquote [attr.data-video-id]="ref.tiktokVideoId" class="tiktok-embed" auto-play="0">
       <section>
