--- a/src/app/modules/layout/components/sidebar/sidebar.component.html
+++ b/src/app/modules/layout/components/sidebar/sidebar.component.html
@@ -1,21 +1,18 @@
-<nav
-  [ngClass]="menuService.showSideBar ? 'w-52 xl:w-64' : 'w-[70px]'"
+<nav [ngClass]="menuService.showSideBar ? 'w-52 xl:w-64' : 'w-[70px]'"
   class="scrollbar-thumb-rounded scrollbar-track-rounded hidden h-full flex-col justify-between overflow-auto bg-background pt-3 transition-all duration-300 scrollbar-thin scrollbar-track-transparent scrollbar-thumb-card lg:flex">
   <div class="px-4">
     <!-- Logo -->
     <div class="relative h-10">
       <div class="flex items-center" *ngIf="menuService.showSideBar">
-        <a
-          (click)="toggleSidebar()"
+        <a (click)="toggleSidebar()"
           class="flex cursor-pointer items-center justify-center rounded bg-primary p-2 focus:outline-none focus:ring-1">
           <svg-icon src="assets/icons/logo.svg"> </svg-icon>
         </a>
         <b class="ml-1 pl-2 text-sm font-bold text-foreground">
-          DisplayName
+          J'ai la ref !
         </b>
       </div>
-      <button
-        (click)="toggleSidebar()"
+      <button (click)="toggleSidebar()"
         class="absolute top-2 right-2 flex h-5 w-5 items-center justify-center rounded text-muted-foreground/50 transition-all duration-200 focus:outline-none hover:text-muted-foreground"
         [ngClass]="{ 'rotate-180': !menuService.showSideBar }">
         <svg-icon src="assets/icons/heroicons/solid/chevron-double-left.svg"> </svg-icon>
@@ -33,12 +30,9 @@
 
   <div class="mx-4 my-4 space-y-1">
     <!-- Version -->
-    <a
-      target="_blank"
-      href="https://github.com/luciano-work/angular-tailwind"
+    <a target="_blank" href="https://github.com/luciano-work/angular-tailwind"
       class="group flex h-9 cursor-pointer items-center justify-start rounded p-2 hover:bg-card">
-      <svg-icon
-        src="assets/icons/heroicons/outline/information-circle.svg"
+      <svg-icon src="assets/icons/heroicons/outline/information-circle.svg"
         [svgClass]="'h-5 w-5 text-muted-foreground/50'">
       </svg-icon>
 
