--- a/src/app/modules/dashboard/components/nft/nft-chart-card/nft-chart-card.component.html
+++ b/src/app/modules/dashboard/components/nft/nft-chart-card/nft-chart-card.component.html
@@ -34,7 +34,7 @@
     </div>
   </div>
   <!-- Card Body -->
-  <apx-chart
+  <!-- <apx-chart
     [series]="chartOptions.series!"
     [chart]="chartOptions.chart!"
     [legend]="chartOptions.legend!"
@@ -48,7 +48,7 @@
     [colors]="chartOptions.colors!"
     [grid]="chartOptions.grid!"
     [title]="chartOptions.title!">
-  </apx-chart>
+  </apx-chart> -->
   <!-- end Chart -->
 
   <!--Table-->
