--- a/src/app/modules/dashboard/pages/nft/nft.component.html
+++ b/src/app/modules/dashboard/pages/nft/nft.component.html
@@ -14,7 +14,7 @@
     <div nft-single-card [nft]="nft[2]"></div>
     <!-- end Single Card -->
     <!-- Single Card -->
-    <div nft-chart-card class="md:col-span-2 xl:col-span-1"></div>
+    <!-- <div nft-chart-card class="md:col-span-2 xl:col-span-1"></div> -->
     <!-- end Single Card -->
     <!-- Auctions Table -->
     <div nft-auctions-table class="md:col-span-2 xl:col-span-3"></div>
