--- a/src/app/modules/dashboard/components/ref/ref-dual-card/ref-dual-card.component.html
+++ b/src/app/modules/dashboard/components/ref/ref-dual-card/ref-dual-card.component.html
@@ -2,11 +2,10 @@
   <div
     class=" relative  flex-1 cursor-pointer rounded-md bg-cover transition duration-150 ease-in-out hover:opacity-75 flex justify-center">
 
-    <img class="h-full object-cover z-10"
-      [src]="'https://p16-sign-useast2a.tiktokcdn.com/obj/tos-useast2a-p-0037-euttp/ocADFBJtNEsWXeIYIBurEfmYP0mJmQA2ADvRQt?lk3s=b59d6b55&nonce=97044&refresh_token=0b0860d073effeab130579401a21187b&x-expires=1723212000&x-signature=O4mM9w3Qz3Zqdt7dxufRFo%2F%2BzYI%3D&shp=b59d6b55&shcp=-'"
-      alt="thumbnail">
+    <img class="h-full object-cover z-10" [src]="ref.tiktokVideoThumbnail" alt="thumbnail">
     <div class="absolute inset-0 bg-center  bg-repeat bg-contain opacity-30 rounded-md"
-      style="background-image: url('https://p16-sign-useast2a.tiktokcdn.com/obj/tos-useast2a-p-0037-euttp/ocADFBJtNEsWXeIYIBurEfmYP0mJmQA2ADvRQt?lk3s=b59d6b55&nonce=97044&refresh_token=0b0860d073effeab130579401a21187b&x-expires=1723212000&x-signature=O4mM9w3Qz3Zqdt7dxufRFo%2F%2BzYI%3D&shp=b59d6b55&shcp=-'); filter: grayscale(100%) brightness(50%);">
+      style="filter: grayscale(100%) brightness(50%);"
+      [style.background-image]="'url(' + ref.tiktokVideoThumbnail + ')'">
     </div>
   </div>
   <!-- Details  -->
@@ -66,7 +65,7 @@
 
         <div class="flex flex-col">
           <small class="text-xs text-muted-foreground">Partagée</small>
-          <a href="" class="text-xs font-semibold text-foreground hover:text-primary"> 300 fois </a>
+          <a href="" class="text-xs font-semibold text-foreground hover:text-primary"> {{ref.shareCount}} fois </a>
         </div>
       </div>
     </div>
