--- a/src/app/modules/dashboard/components/ref/ref-table/ref-table.component.html
+++ b/src/app/modules/dashboard/components/ref/ref-table/ref-table.component.html
@@ -24,13 +24,12 @@
       <!--end Table head-->
       <!--Table body-->
       <tbody>
-        <tr *ngFor="let ref of refs" class="border-b border-dashed border-border hover:bg-card"
-          (click)="navigateToRef(ref)">
-          <td class="py-2 pr-2">
+        <tr *ngFor="let ref of refs" class="border-b border-dashed border-border hover:bg-card">
+          <td class="py-2 pr-2 cursor-pointer" (click)="navigateToRef(ref)">
             <div class="flex items-center">
               <img [src]="ref.tiktokVideoThumbnail" class="mr-2 h-20 w-10 flex-none rounded-sm" alt="" />
               <div class="flex flex-col justify-items-start">
-                <a href="#" class="mb-1 text-sm font-semibold text-foreground">{{ ref.title }}</a>
+                <a class="mb-1 text-sm font-semibold text-foreground">{{ ref.title }}</a>
                 <span class="text-xs font-semibold text-muted-foreground/50">{{ ref.memeAuthor}}</span>
               </div>
             </div>
@@ -43,7 +42,7 @@
           </td>
           <td class="py-2 pl-2 text-right hidden md:table-cell">
             <div class="flex justify-end">
-              <button href="#"
+              <button
                 class="flex h-7 w-7 items-center justify-center rounded-md bg-card text-muted-foreground hover:bg-muted hover:text-foreground">
                 <svg-icon src="assets/icons/heroicons/outline/arrow-sm-right.svg" [svgClass]="'h-5 w-5'"> </svg-icon>
               </button>
