--- a/src/app/modules/dashboard/components/ref/ref-table/ref-table.component.html
+++ b/src/app/modules/dashboard/components/ref/ref-table/ref-table.component.html
@@ -24,8 +24,9 @@
       <!--end Table head-->
       <!--Table body-->
       <tbody>
-        <tr *ngFor="let ref of refs" class="border-b border-dashed border-border hover:bg-card">
-          <td class="py-2 pr-2 cursor-pointer" (click)="navigateToRef(ref)">
+        <tr *ngFor="let ref of refs" class="border-b border-dashed border-border hover:bg-card  cursor-pointer"
+          (click)="navigateToRef(ref)">
+          <td class="py-2 pr-2">
             <div class="flex items-center">
               <img [src]="ref.tiktokVideoThumbnail" class="mr-2 h-20 w-10 flex-none rounded-sm" alt="" />
               <div class="flex flex-col justify-items-start">
