--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -6,14 +6,13 @@
     <!-- Header -->
     <app-navbar></app-navbar>
     <!-- main content -->
-    <div
-      id="main-content"
+    <div id="main-content"
       class="scrollbar-thumb-rounded scrollbar-track-rounded grow overflow-auto scrollbar-thin scrollbar-track-transparent scrollbar-thumb-muted">
       <router-outlet></router-outlet>
     </div>
 
     <!-- footer -->
-    <app-footer></app-footer>
+    <!-- <app-footer></app-footer> -->
 
     <!-- Bottom bar -->
     <!-- <app-bottom-navbar></app-bottom-navbar> -->
