--- a/src/app/modules/layout/components/navbar/navbar-mobile/navbar-mobile.component.html
+++ b/src/app/modules/layout/components/navbar/navbar-mobile/navbar-mobile.component.html
@@ -7,13 +7,11 @@
 		From: "opacity-100 scale-100"
 		To: "opacity-0 scale-95"
 -->
-<div
-  [ngClass]="
+<div [ngClass]="
     menuService.showMobileMenu
       ? 'pointer-events-auto scale-100 animate-fade-in-up opacity-100 duration-200'
       : 'pointer-events-none scale-95 opacity-0 duration-100 ease-out'
-  "
-  class="absolute inset-x-0 top-0 z-10 origin-top-right transform p-2 transition md:hidden">
+  " class="absolute inset-x-0 top-0 z-10 origin-top-right transform p-2 transition md:hidden">
   <div class="rounded-lg bg-background shadow-lg">
     <div class="pt-5 pb-6">
       <div class="flex items-center justify-between px-5">
@@ -23,13 +21,11 @@
             <a class="flex items-center justify-center rounded bg-primary p-2 focus:outline-none focus:ring-1">
               <svg-icon src="assets/icons/logo.svg"> </svg-icon>
             </a>
-            <b class="pl-3 text-sm font-bold text-foreground"> Angular Tailwind </b>
+            <b class="pl-3 text-sm font-bold text-foreground"> J'ai la ref ! </b>
           </div>
         </div>
         <div class="-mr-2">
-          <button
-            (click)="toggleMobileMenu()"
-            type="button"
+          <button (click)="toggleMobileMenu()" type="button"
             class="inline-flex items-center justify-center rounded-md p-2 text-muted-foreground transition-transform focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primary hover:rotate-90 hover:bg-card hover:text-foreground">
             <span class="sr-only">Close menu</span>
             <!-- Heroicon name: outline/x -->
