fix navigate to ref and dashboard

--- a/src/app/modules/dashboard/components/ref/ref-dual-card/ref-dual-card.component.html
+++ b/src/app/modules/dashboard/components/ref/ref-dual-card/ref-dual-card.component.html
@@ -92,7 +92,7 @@
         </svg>
         <span>Partages la ref !</span>
       </button>
-      <button
+      <button (click)="navigateToRef(ref)"
         class="lex-none rounded-md bg-card px-4 py-2.5 text-sm font-semibold text-muted-foreground hover:bg-muted hover:text-foreground">
         Visionner
       </button>
