--- a/src/app/modules/dashboard/pages/ref/ref.component.html
+++ b/src/app/modules/dashboard/pages/ref/ref.component.html
@@ -23,7 +23,7 @@
 
   <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-4">
     <div app-ref-dual-card [ref]="refs[0]" class="md:col-span-2"></div>
-    <div app-ref-dual-card [ref]="refs[0]" class="md:col-span-2"></div>
+    <!-- <div app-ref-dual-card [ref]="refs[0]" class="md:col-span-2"></div> -->
     <div app-ref-table class="col-span-1 md:col-span-2 xl:col-span-4"></div>
   </div>
 
