--- a/src/app/modules/dashboard/components/ref/ref-dual-card/ref-dual-card.component.html
+++ b/src/app/modules/dashboard/components/ref/ref-dual-card/ref-dual-card.component.html
@@ -1,6 +1,7 @@
 <div class="flex flex-col rounded-lg bg-background p-8 sm:flex-row" *ngIf="ref">
   <div
-    class=" relative  flex-1 cursor-pointer rounded-md bg-cover transition duration-150 ease-in-out hover:opacity-75 flex justify-center">
+    class=" relative  flex-1 cursor-pointer rounded-md bg-cover transition duration-150 ease-in-out hover:opacity-75 flex justify-center"
+    (click)="navigateToRef(ref)">
 
     <img class="h-full object-cover z-1 w-1/2 " [src]="ref.tiktokVideoThumbnail" alt="thumbnail">
     <div class="absolute inset-0 bg-center  bg-repeat bg-contain opacity-30 rounded-md"
@@ -40,7 +41,7 @@
 
         <div class="flex flex-col">
           <small class="text-xs text-muted-foreground">Auteur de la ref</small>
-          <a href="" class="text-xs font-semibold text-foreground hover:text-primary"> {{ref.memeAuthor}} </a>
+          <a class="text-xs font-semibold text-foreground hover:text-primary"> {{ref.memeAuthor}} </a>
         </div>
       </div>
 
@@ -65,7 +66,7 @@
 
         <div class="flex flex-col">
           <small class="text-xs text-muted-foreground">Partagée</small>
-          <a href="" class="text-xs font-semibold text-foreground hover:text-primary"> {{shareCount}} fois </a>
+          <a class="text-xs font-semibold text-foreground hover:text-primary"> {{shareCount}} fois </a>
         </div>
       </div>
     </div>
