--- a/src/app/modules/dashboard/pages/ref/ref.component.html
+++ b/src/app/modules/dashboard/pages/ref/ref.component.html
@@ -9,13 +9,13 @@
       </div>
     </div>
     <div class="inline-block space-x-4">
-      <button
+      <!-- <button
         class="flex-none rounded-md bg-muted px-4 py-2.5 text-xs font-semibold text-muted-foreground hover:text-foreground">
         Manage Bids
       </button>
       <button class="flex-none rounded-md bg-primary px-4 py-2.5 text-xs font-semibold text-primary-foreground">
         Manage Bids
-      </button>
+      </button> -->
     </div>
   </div>
   <!-- end Header -->
