fix placeholder on input

--- a/src/app/modules/ref/ref-upload/ref-upload.component.html
+++ b/src/app/modules/ref/ref-upload/ref-upload.component.html
@@ -65,8 +65,8 @@
               [ngClass]="{ 'is__invalid-input': submitted && controls['tiktokVideoCite'].errors }" class="peer block"
               placeholder=" " formControlName="tiktokVideoCite" />
             <label for="tiktokVideoCite"
-              class="absolute top-2 left-1 z-10 origin-[0] -translate-y-4 scale-95 transform bg-background px-2 text-sm text-muted-foreground duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary">
-              Le lien de la vidéo (ex: https://tiktok.com/user/video/1234)
+              class="absolute top-2 left-1 z-10 origin-[0] -translate-y-4 scale-95 transform bg-background px-2 text-sm text-muted-foreground duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary  peer-[:not(:placeholder-shown)]:overflow-hidden peer-[:not(:placeholder-shown)]:text-ellipsis peer-[:not(:placeholder-shown)]:max-w-full peer-[:not(:placeholder-shown)]:whitespace-nowrap peer-focus:overflow-hidden peer-focus:text-ellipsis peer-focus:max-w-full peer-focus:whitespace-nowrap">
+              Lien de la ref Tiktok (ex: https://tiktok.com/user/video/1234)
             </label>
           </div>
           <div *ngIf="submitted && controls['tiktokVideoCite'].errors" class="is__invalid-error">
@@ -79,7 +79,7 @@
 
       <div class="mb-2 flex items-center justify-end space-x-3">
 
-        <app-button routerLink="/auth/forgot-password" impact="none" tone="primary" shape="rounded" size="small">
+        <app-button impact="none" tone="primary" shape="rounded" size="small">
           Besoin d'aide? Consulte le tutoriel
         </app-button>
       </div>
