--- a/src/app/modules/ref/ref-view/ref-view.component.html
+++ b/src/app/modules/ref/ref-view/ref-view.component.html
@@ -1,6 +1,6 @@
 <div class="h-full p-8 ">
-  <div class="h-full w-full flex gap-5 flex-col padding p-8 bg-background rounded-xl" *ngIf="ref">
-    <div class="h-full">
+  <div class="h-full w-full flex gap-5 flex-col padding p-8 bg-background rounded-xl" *ngIf="ref ">
+    <div class="h-full" *ngIf="tiktokVideoUrl">
       <iframe class="rounded-xl" width="100%" height="100%" [src]="tiktokVideoUrl" allow="fullscreen"
         title="test"></iframe>
     </div>
@@ -29,7 +29,7 @@
 
             <div class="flex flex-col">
               <small class="text-xs text-muted-foreground">Visionnée</small>
-              <a href="" class="text-xs font-semibold text-foreground hover:text-primary"> {{viewCount}} fois </a>
+              <a class="text-xs font-semibold text-foreground hover:text-primary"> {{viewCount}} fois </a>
             </div>
           </div>
 
