--- a/src/app/modules/ref/ref-view/ref-view.component.html
+++ b/src/app/modules/ref/ref-view/ref-view.component.html
@@ -1,5 +1,5 @@
-<div class="h-full p-8 ">
-  <div class="h-full w-full flex gap-5 flex-col padding p-8 bg-background rounded-xl" *ngIf="ref ">
+<div class="h-full p-4 md:p-8 ">
+  <div class="h-full w-full flex gap-5 flex-col padding p-4 md:p-8 bg-background rounded-xl" *ngIf="ref ">
     <div class="h-full" *ngIf="tiktokVideoUrl">
       <iframe class="rounded-xl" width="100%" height="100%" [src]="tiktokVideoUrl" allow="fullscreen"
         title="test"></iframe>
